// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processForm should return error when credit card validation fails 1`] = `
Object {
  "error": true,
  "fieldErrors": Object {
    "creditCardErrors": "mockedCreditCardErrors",
  },
}
`;

exports[`processForm should return viewData 1`] = `
Object {
  "error": false,
  "viewData": Object {
    "paymentInformation": Object {
      "adyenIssuerName": "mocked_issuer_name",
      "adyenPaymentMethod": "mockedPaymentMethod",
      "cardHolderName": "mockedOwnerName",
      "cardNumber": "mockedCardNumber",
      "cardType": "mockedCardType",
      "isCreditCard": true,
      "stateData": "mockedStateData",
    },
    "paymentMethod": Object {
      "htmlName": "mockedPaymentMethod",
      "value": "mockedPaymentMethod",
    },
    "saveCard": true,
  },
}
`;

exports[`processForm should return viewData when authenticated and registered 1`] = `
Object {
  "error": false,
  "viewData": Object {
    "0": "m",
    "1": "o",
    "2": "c",
    "3": "k",
    "4": "e",
    "5": "d",
    "6": "_",
    "7": "i",
    "8": "d",
    "paymentInformation": Object {
      "0": "m",
      "1": "o",
      "2": "c",
      "3": "k",
      "4": "e",
      "5": "d",
      "6": "_",
      "7": "i",
      "8": "d",
      "adyenIssuerName": "mocked_issuer_name",
      "adyenPaymentMethod": "mockedPaymentMethod",
      "cardHolderName": "mockedOwnerName",
      "cardNumber": "mocked_cc_number",
      "cardType": "mocked_cc_type",
      "creditCardToken": "mocked_raw_cc_token ",
      "expirationMonth": "mocked_cc_exp_month",
      "expirationYear": "mocked_cc_exp_year",
      "isCreditCard": false,
      "securityCode": "mocked_security_code",
      "stateData": "mockedStateData",
    },
    "paymentMethod": Object {
      "htmlName": "mockedPaymentMethod",
      "value": "mockedPaymentMethod",
    },
    "saveCard": true,
  },
}
`;
